# nes-emu

./: .gitignore  Cargo.toml  README.md
src/: build.rs  cart.rs  controller.rs  cpu.rs  error.rs  graphics.rs  instr.rs  lib.rs  main.rs  mem.rs  ppu.rs
src/benches/: render_frames.rs
src/cart/: builder.rs  cart.rs  mapper0.rs  mapper1.rs  mapper2.rs  mock.rs  nrom.rs
src/cpu/: cpu.rs  decode.rs  deref.rs  exec.rs  isa.rs  reg.rs  utils.rs
src/graphics/: debug.rs  graphics.rs  simple.rs
src/ines/: check.rs  parse.rs
src/mem/: bus.rs  device.rs  error.rs  ram.rs  utils.rs
src/ppu/: colors.rs  ppu.rs
test_files/: trimlog.py
