[package]
name = "nes-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ines-check"
path = "src/ines/check.rs"

[dependencies]
bit = "0.1.1"
bitflags="1.3.2"
lazy_static="1.4.0"
nom = "7.1.1"
strum = "0.24"
strum_macros = "0.24"
