[package]
name = "nes-emu"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false

[[bin]]
name = "nes-emu"
path = "src/main.rs"
test = true

[[bin]]
name = "ines-check"
path = "src/ines/check.rs"
test = true

[dependencies]
bit = "0.1.1"
bitfield = "0.14.0"
bitflags="1.3.2"
derive-try-from-primitive = "1.0.0"
lazy_static="1.4.0"
nom = "7.1.1"
rand = "0.8.5"
strum = "0.24"
strum_macros = "0.24"

[dependencies.clap]
version = "4.0.32"
# default-features = false
features = ["derive"]

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["unsafe_textures"]

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "render_frames"
path = "src/benches/render_frames.rs"
harness = false

